--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
          <td>ed. fisica</td>
          <td>biologia</td>
     </tr>
+     
+    <table>
+        <tr>
+         <td>11:30</td>
+         <td>arte</td>
+         <td>educação fisica</td>
+         <td>inglês</td
+         <td>química</td>
+         <tdmatemática</td>
+    </tr> 
     </main>
       </body>
     
