--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
          <td>educação fisica</td>
          <td>inglês</td
          <td>química</td>
-         <tdmatemática</td>
+         <td>matemática</td>
     </tr> 
     </main>
       </body>
